# python_pomodoro

./: .gitignore  LICENSE  Pipfile  README.md  dev.md  pyproject.toml  setup.cfg
python_pomodoro/: app.py  gui.py  helpers.py  settings.py  tasklist.py  timer.py  tomato_timer.py
src/: app.py  gui.py
tests/: conftest.py  test_app.py  test_settings.py  test_tasklist.py  test_tomato_timer.py
